--- a/.github/workflows/GithubActionsRelease.yml
+++ b/.github/workflows/GithubActionsRelease.yml
@@ -52,15 +52,14 @@ jobs:
 
     steps:
     - name: Checkout repository under $GITHUB_WORKSPACE so the job can access it 🛎️
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         persist-credentials: false
 
-    - name: Use prelease dotnet
-      uses: actions/setup-dotnet@v2
+    - name: Use dotnet 8
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '8.x'
-        include-prerelease: true
 
     - name: Get the version
       run:  echo "version=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
