--- a/.github/workflows/GithubActionsWIP.yml
+++ b/.github/workflows/GithubActionsWIP.yml
@@ -31,15 +31,14 @@ jobs:
       shell: bash
 
     - name: Checkout repository under $GITHUB_WORKSPACE so the job can access it 🛎️
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         persist-credentials: false
 
-    - name: Use prelease dotnet
-      uses: actions/setup-dotnet@v2
+    - name: Use dotnet 8
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '8.x'
-        include-prerelease: true
 
     - name: Build CompressedStaticFiles.AspNetCore 🔧
       run: dotnet build ${{env.projectCSFB}} --configuration ${{env.buildConfiguration}} --version-suffix ${{env.ciSuffix}}
