--- a/CompressedStaticFiles.AspNet/CompressedStaticFiles.AspNet.csproj
+++ b/CompressedStaticFiles.AspNet/CompressedStaticFiles.AspNet.csproj
@@ -9,7 +9,7 @@
 			Files need to be compressed and converted to other image formats before deploying.
 		</Description>
 		<PackageProjectUrl>https://github.com/material-blazor/CompressedStaticFiles.AspNetCore</PackageProjectUrl>
-		<PackageTags>aspnetcore;staticfiles;compression;precompressed;gzip;brotli;zopfli;webp;avif;</PackageTags>
+		<PackageTags>aspnetcore;staticfiles;compression;precompressed;gzip;brotli;zopfli;webp;avif;zstd</PackageTags>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageReleaseNotes></PackageReleaseNotes>
 		<AssemblyVersion>1.0.0.0</AssemblyVersion>
